Update steam_final_project.ipynb to reflect changes in data structure, including the addition of 'normalize' and 'normalized_genre' columns, and adjust execution counts. Modify output display to enhance clarity and ensure consistency in data representation.

--- a/steam_final_project.ipynb
+++ b/steam_final_project.ipynb
@@ -2089,7 +2089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 62,
    "id": "76d8a611",
    "metadata": {},
    "outputs": [
@@ -2127,7 +2127,8 @@
        "      <th>overall_player_rating</th>\n",
        "      <th>number_of_reviews_from_purchased_people</th>\n",
        "      <th>number_of_english_reviews</th>\n",
-       "      <th>genres_list</th>\n",
+       "      <th>normalize</th>\n",
+       "      <th>normalized_genre</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -2146,7 +2147,26 @@
        "      <td>Very Positive</td>\n",
        "      <td>-8313603</td>\n",
        "      <td>2258990.0</td>\n",
-       "      <td>[['FPS', 'Shooter', 'Multiplayer', 'Competitiv...</td>\n",
+       "      <td>'Action'</td>\n",
+       "      <td>'action'</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>counter-strike 2</td>\n",
+       "      <td>Action</td>\n",
+       "      <td>Sales</td>\n",
+       "      <td>1</td>\n",
+       "      <td>['FPS', 'Shooter', 'Multiplayer', 'Competitive...</td>\n",
+       "      <td>['OS: Windows® 10', 'Processor: 4 hardware CPU...</td>\n",
+       "      <td>['OS: Windows® 10', 'Processor: 4 hardware CPU...</td>\n",
+       "      <td>21-Aug-12</td>\n",
+       "      <td>['Valve']</td>\n",
+       "      <td>['Valve']</td>\n",
+       "      <td>Very Positive</td>\n",
+       "      <td>-8313603</td>\n",
+       "      <td>2258990.0</td>\n",
+       "      <td>'Strategy'</td>\n",
+       "      <td>'strategy'</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -2163,7 +2183,26 @@
        "      <td>Very Positive</td>\n",
        "      <td>50802</td>\n",
        "      <td>51920.0</td>\n",
-       "      <td>[['Warhammer 40K', 'Action', 'Third-Person Sho...</td>\n",
+       "      <td>'Action'</td>\n",
+       "      <td>'action'</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>warhammer 40,000: space marine 2</td>\n",
+       "      <td>Action</td>\n",
+       "      <td>Sales</td>\n",
+       "      <td>2</td>\n",
+       "      <td>['Warhammer 40K', 'Action', 'Third-Person Shoo...</td>\n",
+       "      <td>['Requires a 64-bit processor and operating sy...</td>\n",
+       "      <td>['Requires a 64-bit processor and operating sy...</td>\n",
+       "      <td>09-Sep-24</td>\n",
+       "      <td>['Saber Interactive']</td>\n",
+       "      <td>['Focus Entertainment']</td>\n",
+       "      <td>Very Positive</td>\n",
+       "      <td>50802</td>\n",
+       "      <td>51920.0</td>\n",
+       "      <td>'Adventure'</td>\n",
+       "      <td>'adventure'</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -2180,41 +2219,8 @@
        "      <td>Very Positive</td>\n",
        "      <td>-680264</td>\n",
        "      <td>324124.0</td>\n",
-       "      <td>[['Cyberpunk', 'Open World', 'Nudity', 'RPG', ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>black myth: wukong</td>\n",
-       "      <td>Action</td>\n",
-       "      <td>Sales</td>\n",
-       "      <td>4</td>\n",
-       "      <td>['Mythology', 'Action RPG', 'Action', 'RPG', '...</td>\n",
-       "      <td>['Requires a 64-bit processor and operating sy...</td>\n",
-       "      <td>['Requires a 64-bit processor and operating sy...</td>\n",
-       "      <td>19-Aug-24</td>\n",
-       "      <td>['Game Science']</td>\n",
-       "      <td>['Game Science']</td>\n",
-       "      <td>Overwhelmingly Positive</td>\n",
-       "      <td>-654820</td>\n",
-       "      <td>51931.0</td>\n",
-       "      <td>[['Mythology', 'Action RPG', 'Action', 'RPG', ...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>elden ring</td>\n",
-       "      <td>Action</td>\n",
-       "      <td>Sales</td>\n",
-       "      <td>5</td>\n",
-       "      <td>['Souls-like', 'Dark Fantasy', 'Open World', '...</td>\n",
-       "      <td>['Requires a 64-bit processor and operating sy...</td>\n",
-       "      <td>['Requires a 64-bit processor and operating sy...</td>\n",
-       "      <td>25-Feb-22</td>\n",
-       "      <td>['FromSoftware, Inc.']</td>\n",
-       "      <td>['FromSoftware, Inc.', 'Bandai Namco Entertain...</td>\n",
-       "      <td>Very Positive</td>\n",
-       "      <td>-705261</td>\n",
-       "      <td>491741.0</td>\n",
-       "      <td>[['Souls-like', 'Dark Fantasy', 'Open World', ...</td>\n",
+       "      <td>'RPG'</td>\n",
+       "      <td>'rpg'</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2223,73 +2229,66 @@
       "text/plain": [
        "                          game_name   genre rank_type  rank  \\\n",
        "0                  counter-strike 2  Action     Sales     1   \n",
+       "0                  counter-strike 2  Action     Sales     1   \n",
+       "1  warhammer 40,000: space marine 2  Action     Sales     2   \n",
        "1  warhammer 40,000: space marine 2  Action     Sales     2   \n",
        "2                    cyberpunk 2077  Action     Sales     3   \n",
-       "3                black myth: wukong  Action     Sales     4   \n",
-       "4                        elden ring  Action     Sales     5   \n",
        "\n",
        "                                              genres  \\\n",
        "0  ['FPS', 'Shooter', 'Multiplayer', 'Competitive...   \n",
+       "0  ['FPS', 'Shooter', 'Multiplayer', 'Competitive...   \n",
+       "1  ['Warhammer 40K', 'Action', 'Third-Person Shoo...   \n",
        "1  ['Warhammer 40K', 'Action', 'Third-Person Shoo...   \n",
        "2  ['Cyberpunk', 'Open World', 'Nudity', 'RPG', '...   \n",
-       "3  ['Mythology', 'Action RPG', 'Action', 'RPG', '...   \n",
-       "4  ['Souls-like', 'Dark Fantasy', 'Open World', '...   \n",
        "\n",
        "                          minimum_system_requirement  \\\n",
        "0  ['OS: Windows® 10', 'Processor: 4 hardware CPU...   \n",
+       "0  ['OS: Windows® 10', 'Processor: 4 hardware CPU...   \n",
+       "1  ['Requires a 64-bit processor and operating sy...   \n",
        "1  ['Requires a 64-bit processor and operating sy...   \n",
        "2  ['Requires a 64-bit processor and operating sy...   \n",
-       "3  ['Requires a 64-bit processor and operating sy...   \n",
-       "4  ['Requires a 64-bit processor and operating sy...   \n",
        "\n",
        "                        recommend_system_requirement release_date  \\\n",
        "0  ['OS: Windows® 10', 'Processor: 4 hardware CPU...    21-Aug-12   \n",
+       "0  ['OS: Windows® 10', 'Processor: 4 hardware CPU...    21-Aug-12   \n",
+       "1  ['Requires a 64-bit processor and operating sy...    09-Sep-24   \n",
        "1  ['Requires a 64-bit processor and operating sy...    09-Sep-24   \n",
        "2  ['Requires a 64-bit processor and operating sy...    10-Dec-20   \n",
-       "3  ['Requires a 64-bit processor and operating sy...    19-Aug-24   \n",
-       "4  ['Requires a 64-bit processor and operating sy...    25-Feb-22   \n",
        "\n",
-       "                developer                                          publisher  \\\n",
-       "0               ['Valve']                                          ['Valve']   \n",
-       "1   ['Saber Interactive']                            ['Focus Entertainment']   \n",
-       "2      ['CD PROJEKT RED']                                 ['CD PROJEKT RED']   \n",
-       "3        ['Game Science']                                   ['Game Science']   \n",
-       "4  ['FromSoftware, Inc.']  ['FromSoftware, Inc.', 'Bandai Namco Entertain...   \n",
+       "               developer                publisher overall_player_rating  \\\n",
+       "0              ['Valve']                ['Valve']         Very Positive   \n",
+       "0              ['Valve']                ['Valve']         Very Positive   \n",
+       "1  ['Saber Interactive']  ['Focus Entertainment']         Very Positive   \n",
+       "1  ['Saber Interactive']  ['Focus Entertainment']         Very Positive   \n",
+       "2     ['CD PROJEKT RED']       ['CD PROJEKT RED']         Very Positive   \n",
        "\n",
-       "     overall_player_rating number_of_reviews_from_purchased_people  \\\n",
-       "0            Very Positive                                -8313603   \n",
-       "1            Very Positive                                   50802   \n",
-       "2            Very Positive                                 -680264   \n",
-       "3  Overwhelmingly Positive                                 -654820   \n",
-       "4            Very Positive                                 -705261   \n",
+       "  number_of_reviews_from_purchased_people  number_of_english_reviews  \\\n",
+       "0                                -8313603                  2258990.0   \n",
+       "0                                -8313603                  2258990.0   \n",
+       "1                                   50802                    51920.0   \n",
+       "1                                   50802                    51920.0   \n",
+       "2                                 -680264                   324124.0   \n",
        "\n",
-       "   number_of_english_reviews  \\\n",
-       "0                  2258990.0   \n",
-       "1                    51920.0   \n",
-       "2                   324124.0   \n",
-       "3                    51931.0   \n",
-       "4                   491741.0   \n",
-       "\n",
-       "                                         genres_list  \n",
-       "0  [['FPS', 'Shooter', 'Multiplayer', 'Competitiv...  \n",
-       "1  [['Warhammer 40K', 'Action', 'Third-Person Sho...  \n",
-       "2  [['Cyberpunk', 'Open World', 'Nudity', 'RPG', ...  \n",
-       "3  [['Mythology', 'Action RPG', 'Action', 'RPG', ...  \n",
-       "4  [['Souls-like', 'Dark Fantasy', 'Open World', ...  "
+       "     normalize normalized_genre  \n",
+       "0     'Action'         'action'  \n",
+       "0   'Strategy'       'strategy'  \n",
+       "1     'Action'         'action'  \n",
+       "1  'Adventure'      'adventure'  \n",
+       "2        'RPG'            'rpg'  "
       ]
      },
-     "execution_count": 41,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "merged_df.head()"
+    "final_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 63,
    "id": "5f8d2ef2",
    "metadata": {},
    "outputs": [
@@ -2298,36 +2297,37 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 672 entries, 0 to 671\n",
-      "Data columns (total 14 columns):\n",
+      "Index: 1296 entries, 0 to 671\n",
+      "Data columns (total 15 columns):\n",
       " #   Column                                   Non-Null Count  Dtype  \n",
       "---  ------                                   --------------  -----  \n",
-      " 0   game_name                                672 non-null    object \n",
-      " 1   genre                                    672 non-null    object \n",
-      " 2   rank_type                                672 non-null    object \n",
-      " 3   rank                                     672 non-null    int64  \n",
-      " 4   genres                                   672 non-null    object \n",
-      " 5   minimum_system_requirement               656 non-null    object \n",
-      " 6   recommend_system_requirement             656 non-null    object \n",
-      " 7   release_date                             656 non-null    object \n",
-      " 8   developer                                656 non-null    object \n",
-      " 9   publisher                                656 non-null    object \n",
-      " 10  overall_player_rating                    656 non-null    object \n",
-      " 11  number_of_reviews_from_purchased_people  656 non-null    object \n",
-      " 12  number_of_english_reviews                656 non-null    float64\n",
-      " 13  genres_list                              672 non-null    object \n",
-      "dtypes: float64(1), int64(1), object(12)\n",
-      "memory usage: 73.6+ KB\n"
+      " 0   game_name                                1296 non-null   object \n",
+      " 1   genre                                    1296 non-null   object \n",
+      " 2   rank_type                                1296 non-null   object \n",
+      " 3   rank                                     1296 non-null   int64  \n",
+      " 4   genres                                   1296 non-null   object \n",
+      " 5   minimum_system_requirement               1296 non-null   object \n",
+      " 6   recommend_system_requirement             1296 non-null   object \n",
+      " 7   release_date                             1296 non-null   object \n",
+      " 8   developer                                1296 non-null   object \n",
+      " 9   publisher                                1296 non-null   object \n",
+      " 10  overall_player_rating                    1296 non-null   object \n",
+      " 11  number_of_reviews_from_purchased_people  1296 non-null   object \n",
+      " 12  number_of_english_reviews                1296 non-null   float64\n",
+      " 13  normalize                                1296 non-null   object \n",
+      " 14  normalized_genre                         1296 non-null   object \n",
+      "dtypes: float64(1), int64(1), object(13)\n",
+      "memory usage: 162.0+ KB\n"
      ]
     }
    ],
    "source": [
-    "merged_df.info()"
+    "final_df.info()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 64,
    "id": "2b9b50d4",
    "metadata": {},
    "outputs": [
@@ -2340,12 +2340,12 @@
     }
    ],
    "source": [
-    "print(merged_df['genres'].isnull().sum())"
+    "print(final_df['genres'].isnull().sum())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 65,
    "id": "6f1ddebe",
    "metadata": {},
    "outputs": [
@@ -2360,13 +2360,13 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "merged_df_new.columns"
+    "final_df.columns"
    ]
   },
   {
