Update steam_final_project.ipynb to reflect changes in statistical outputs, including updated counts, means, and standard deviations. Adjust execution count for consistency and enhance clarity in data representation.

--- a/steam_final_project.ipynb
+++ b/steam_final_project.ipynb
@@ -2371,7 +2371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 67,
    "id": "fe2936b5",
    "metadata": {},
    "outputs": [
@@ -2403,18 +2403,18 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
-       "      <td>672.000000</td>\n",
-       "      <td>6.560000e+02</td>\n",
+       "      <td>1296.000000</td>\n",
+       "      <td>1.296000e+03</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>mean</th>\n",
-       "      <td>19.857143</td>\n",
-       "      <td>1.096778e+05</td>\n",
+       "      <td>19.350309</td>\n",
+       "      <td>1.223450e+05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
-       "      <td>11.509232</td>\n",
-       "      <td>2.118183e+05</td>\n",
+       "      <td>11.331541</td>\n",
+       "      <td>2.171932e+05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
@@ -2423,18 +2423,18 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
-       "      <td>10.000000</td>\n",
-       "      <td>7.969000e+03</td>\n",
+       "      <td>9.000000</td>\n",
+       "      <td>1.696300e+04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
-       "      <td>20.000000</td>\n",
-       "      <td>4.088700e+04</td>\n",
+       "      <td>19.000000</td>\n",
+       "      <td>4.693600e+04</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
-       "      <td>30.000000</td>\n",
-       "      <td>1.208738e+05</td>\n",
+       "      <td>29.000000</td>\n",
+       "      <td>1.362830e+05</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
@@ -2446,30 +2446,38 @@
        "</div>"
       ],
       "text/plain": [
-       "             rank  number_of_english_reviews\n",
-       "count  672.000000               6.560000e+02\n",
-       "mean    19.857143               1.096778e+05\n",
-       "std     11.509232               2.118183e+05\n",
-       "min      1.000000               0.000000e+00\n",
-       "25%     10.000000               7.969000e+03\n",
-       "50%     20.000000               4.088700e+04\n",
-       "75%     30.000000               1.208738e+05\n",
-       "max     40.000000               2.258990e+06"
+       "              rank  number_of_english_reviews\n",
+       "count  1296.000000               1.296000e+03\n",
+       "mean     19.350309               1.223450e+05\n",
+       "std      11.331541               2.171932e+05\n",
+       "min       1.000000               0.000000e+00\n",
+       "25%       9.000000               1.696300e+04\n",
+       "50%      19.000000               4.693600e+04\n",
+       "75%      29.000000               1.362830e+05\n",
+       "max      40.000000               2.258990e+06"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "merged_df.describe()"
+    "final_df.describe()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "3136fb1e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ca4c0f7b",
    "metadata": {},
    "outputs": [],
    "source": []
