Update steam_final_project.ipynb to adjust execution counts for code cells, remove unnecessary output messages, and enhance data type clarity for the 'release_date' and 'overall_player_rating_numeric' columns.

--- a/steam_final_project.ipynb
+++ b/steam_final_project.ipynb
@@ -2764,19 +2764,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 193,
    "id": "bbd6ea17",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\ofirs\\AppData\\Local\\Temp\\ipykernel_6836\\402040055.py:6: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
-      "  final_df.loc[:,'release_date'] = pd.to_datetime(final_df['release_date'], errors='coerce')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 1. המרת תאריך: המרת 'release_date' מ-object ל-datetime\n",
     "# העמודה release_date מסווגת כ-object כרגע [7].\n",
@@ -2788,7 +2779,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 194,
    "id": "9b73ccba",
    "metadata": {},
    "outputs": [],
@@ -2798,32 +2789,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 195,
    "id": "e1fb3c25",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "game_name                                   object\n",
-       "genre                                       object\n",
-       "rank_type                                   object\n",
-       "rank                                         int64\n",
-       "genres                                      object\n",
-       "minimum_system_requirement                  object\n",
-       "recommend_system_requirement                object\n",
-       "release_date                                object\n",
-       "developer                                   object\n",
-       "publisher                                   object\n",
-       "overall_player_rating                       object\n",
-       "number_of_reviews_from_purchased_people     object\n",
-       "number_of_english_reviews                  float64\n",
-       "normalize                                   object\n",
-       "normalized_genre                            object\n",
+       "game_name                                          object\n",
+       "genre                                              object\n",
+       "rank_type                                          object\n",
+       "rank                                                int64\n",
+       "genres                                             object\n",
+       "minimum_system_requirement                         object\n",
+       "recommend_system_requirement                       object\n",
+       "release_date                               datetime64[ns]\n",
+       "developer                                          object\n",
+       "publisher                                          object\n",
+       "overall_player_rating                              object\n",
+       "number_of_reviews_from_purchased_people            object\n",
+       "number_of_english_reviews                         float64\n",
+       "normalize                                          object\n",
+       "normalized_genre                                   object\n",
+       "overall_player_rating_numeric                     float64\n",
        "dtype: object"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 195,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2948,23 +2940,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 190,
    "id": "7a73e067",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\ofirs\\AppData\\Local\\Temp\\ipykernel_6836\\350586400.py:4: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  final_df.loc[:,'overall_player_rating_numeric'] = final_df['overall_player_rating'].map(rating_order).round(0)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#overall_player_rating - defined as 'object', shoukd be defined as int:\n",
     "# using mapping_dict to determine rating_order (mapping_dict = rating_map):\n",
@@ -3486,7 +3465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 191,
    "id": "cd3e7a7e",
    "metadata": {},
    "outputs": [],
