Update steam_final_project.ipynb to adjust execution counts for code cells, enhance data type clarity for the 'release_date' column, and include the new 'overall_player_rating_numeric' column in the data representation.

--- a/steam_final_project.ipynb
+++ b/steam_final_project.ipynb
@@ -2901,7 +2901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 196,
    "id": "9f6bc513",
    "metadata": {},
    "outputs": [
@@ -2911,26 +2911,27 @@
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Index: 1442 entries, 0 to 671\n",
-      "Data columns (total 15 columns):\n",
-      " #   Column                                   Non-Null Count  Dtype  \n",
-      "---  ------                                   --------------  -----  \n",
-      " 0   game_name                                1442 non-null   object \n",
-      " 1   genre                                    1442 non-null   object \n",
-      " 2   rank_type                                1442 non-null   object \n",
-      " 3   rank                                     1442 non-null   int64  \n",
-      " 4   genres                                   1442 non-null   object \n",
-      " 5   minimum_system_requirement               1442 non-null   object \n",
-      " 6   recommend_system_requirement             1442 non-null   object \n",
-      " 7   release_date                             1442 non-null   object \n",
-      " 8   developer                                1442 non-null   object \n",
-      " 9   publisher                                1442 non-null   object \n",
-      " 10  overall_player_rating                    1442 non-null   object \n",
-      " 11  number_of_reviews_from_purchased_people  1442 non-null   object \n",
-      " 12  number_of_english_reviews                1442 non-null   float64\n",
-      " 13  normalize                                1442 non-null   object \n",
-      " 14  normalized_genre                         1442 non-null   object \n",
-      "dtypes: float64(1), int64(1), object(13)\n",
-      "memory usage: 180.2+ KB\n"
+      "Data columns (total 16 columns):\n",
+      " #   Column                                   Non-Null Count  Dtype         \n",
+      "---  ------                                   --------------  -----         \n",
+      " 0   game_name                                1442 non-null   object        \n",
+      " 1   genre                                    1442 non-null   object        \n",
+      " 2   rank_type                                1442 non-null   object        \n",
+      " 3   rank                                     1442 non-null   int64         \n",
+      " 4   genres                                   1442 non-null   object        \n",
+      " 5   minimum_system_requirement               1442 non-null   object        \n",
+      " 6   recommend_system_requirement             1442 non-null   object        \n",
+      " 7   release_date                             1442 non-null   datetime64[ns]\n",
+      " 8   developer                                1442 non-null   object        \n",
+      " 9   publisher                                1442 non-null   object        \n",
+      " 10  overall_player_rating                    1442 non-null   object        \n",
+      " 11  number_of_reviews_from_purchased_people  1442 non-null   object        \n",
+      " 12  number_of_english_reviews                1442 non-null   float64       \n",
+      " 13  normalize                                1442 non-null   object        \n",
+      " 14  normalized_genre                         1442 non-null   object        \n",
+      " 15  overall_player_rating_numeric            1435 non-null   float64       \n",
+      "dtypes: datetime64[ns](1), float64(2), int64(1), object(12)\n",
+      "memory usage: 191.5+ KB\n"
      ]
     }
    ],
@@ -3158,7 +3159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 197,
    "id": "11a1770c",
    "metadata": {},
    "outputs": [
@@ -3169,25 +3170,25 @@
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Index: 1442 entries, 0 to 671\n",
       "Data columns (total 16 columns):\n",
-      " #   Column                                   Non-Null Count  Dtype  \n",
-      "---  ------                                   --------------  -----  \n",
-      " 0   game_name                                1442 non-null   object \n",
-      " 1   genre                                    1442 non-null   object \n",
-      " 2   rank_type                                1442 non-null   object \n",
-      " 3   rank                                     1442 non-null   int64  \n",
-      " 4   genres                                   1442 non-null   object \n",
-      " 5   minimum_system_requirement               1442 non-null   object \n",
-      " 6   recommend_system_requirement             1442 non-null   object \n",
-      " 7   release_date                             1442 non-null   object \n",
-      " 8   developer                                1442 non-null   object \n",
-      " 9   publisher                                1442 non-null   object \n",
-      " 10  overall_player_rating                    1442 non-null   object \n",
-      " 11  number_of_reviews_from_purchased_people  1442 non-null   object \n",
-      " 12  number_of_english_reviews                1442 non-null   float64\n",
-      " 13  normalize                                1442 non-null   object \n",
-      " 14  normalized_genre                         1442 non-null   object \n",
-      " 15  overall_player_rating_numeric            1435 non-null   float64\n",
-      "dtypes: float64(2), int64(1), object(13)\n",
+      " #   Column                                   Non-Null Count  Dtype         \n",
+      "---  ------                                   --------------  -----         \n",
+      " 0   game_name                                1442 non-null   object        \n",
+      " 1   genre                                    1442 non-null   object        \n",
+      " 2   rank_type                                1442 non-null   object        \n",
+      " 3   rank                                     1442 non-null   int64         \n",
+      " 4   genres                                   1442 non-null   object        \n",
+      " 5   minimum_system_requirement               1442 non-null   object        \n",
+      " 6   recommend_system_requirement             1442 non-null   object        \n",
+      " 7   release_date                             1442 non-null   datetime64[ns]\n",
+      " 8   developer                                1442 non-null   object        \n",
+      " 9   publisher                                1442 non-null   object        \n",
+      " 10  overall_player_rating                    1442 non-null   object        \n",
+      " 11  number_of_reviews_from_purchased_people  1442 non-null   object        \n",
+      " 12  number_of_english_reviews                1442 non-null   float64       \n",
+      " 13  normalize                                1442 non-null   object        \n",
+      " 14  normalized_genre                         1442 non-null   object        \n",
+      " 15  overall_player_rating_numeric            1435 non-null   float64       \n",
+      "dtypes: datetime64[ns](1), float64(2), int64(1), object(12)\n",
       "memory usage: 191.5+ KB\n"
      ]
     }
@@ -3198,33 +3199,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 198,
    "id": "da2cf141",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "game_name                                   object\n",
-       "genre                                       object\n",
-       "rank_type                                   object\n",
-       "rank                                         int64\n",
-       "genres                                      object\n",
-       "minimum_system_requirement                  object\n",
-       "recommend_system_requirement                object\n",
-       "release_date                                object\n",
-       "developer                                   object\n",
-       "publisher                                   object\n",
-       "overall_player_rating                       object\n",
-       "number_of_reviews_from_purchased_people     object\n",
-       "number_of_english_reviews                  float64\n",
-       "normalize                                   object\n",
-       "normalized_genre                            object\n",
-       "overall_player_rating_numeric              float64\n",
+       "game_name                                          object\n",
+       "genre                                              object\n",
+       "rank_type                                          object\n",
+       "rank                                                int64\n",
+       "genres                                             object\n",
+       "minimum_system_requirement                         object\n",
+       "recommend_system_requirement                       object\n",
+       "release_date                               datetime64[ns]\n",
+       "developer                                          object\n",
+       "publisher                                          object\n",
+       "overall_player_rating                              object\n",
+       "number_of_reviews_from_purchased_people            object\n",
+       "number_of_english_reviews                         float64\n",
+       "normalize                                          object\n",
+       "normalized_genre                                   object\n",
+       "overall_player_rating_numeric                     float64\n",
        "dtype: object"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 198,
      "metadata": {},
      "output_type": "execute_result"
     }
